--- a/src/app/detalhe-usuario/detalhe-usuario.component.html
+++ b/src/app/detalhe-usuario/detalhe-usuario.component.html
@@ -6,7 +6,7 @@
   <div class="col-9">
     <div class="form-group">
       <label for="nome">Nome</label>
-      <p id="nome"><strong>{{contato?.-nome}}</strong></p>
+      <p id="nome"><strong>{{contato?.nome}}</strong></p>
     </div>
     <div class="form-group">
       <label for="telefone">Telefone</label>
@@ -14,15 +14,11 @@
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <p id="email"><strong>{{contato.?.-email}}</strong></p>
+      <p id="email"><strong>{{contato.?.email}}</strong></p>
     </div>
     <div class="form-group">
         <label for="tipo">Email</label>
-        <p id="tipo"><strong>{{contato.?.-tipo}}</strong></p>
+        <p id="tipo"><strong>{{contato.?.tipo}}</strong></p>
       </div>
     </div>
-
-
-  </div>
-
 </div>
