--- a/src/app/detalhe-usuario/detalhe-usuario.component.html
+++ b/src/app/detalhe-usuario/detalhe-usuario.component.html
@@ -14,11 +14,11 @@
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <p id="email"><strong>{{contato.?.email}}</strong></p>
+      <p id="email"><strong>{{contato?.email}}</strong></p>
     </div>
     <div class="form-group">
         <label for="tipo">Email</label>
-        <p id="tipo"><strong>{{contato.?.tipo}}</strong></p>
+        <p id="tipo"><strong>{{contato?.tipo}}</strong></p>
       </div>
     </div>
 </div>
